# stm32f103c8t6

./: .gitignore  Cargo.toml  openocd.cfg
.cargo/: config.toml
src/: main.rs
